# PIDF_control

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: filter.hpp  matrix.hpp  pid_control.hpp  pidf.hpp  pidf_filter.hpp
include/pid_control/: derivative_filter.hpp  pdf_filter.hpp  pi_filter.hpp  pidf_filter.hpp  types.hpp
matlab/: derive_pidf.m  pd_control.m
matlab/test/: run_test.m  test__pd_control__motor.m
scripts/: clean_build.sh  update_test_data.sh
test/: pid_control-DF.cpp  pid_control-PDF.cpp  test-pid_control-DF.cpp  test-pid_control-PDF.cpp  test-pidf-DF.cpp  test-pidf-PDF.cpp  test-pidf_filter-DF.cpp
test/matlab/: pid_control__DF__test.m  pid_control__PDF__test.m  run_all_tests.m  run_test.m  test__pid_control__DF.m  test__pid_control__PDF.m  test__pidf_PDF.m  test__pidf_df.m
